Second initial commit

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ classifiers =
 packages = find:
 install_requires =
     numpy
+    nibabel[dicom,dicomfs,spm]
 
 python_requires = >=3.8
 include_package_data = True
