--- a/src/napari_nibabel/napari.yaml
+++ b/src/napari_nibabel/napari.yaml
@@ -4,15 +4,14 @@ contributions:
   commands:
     - id: napari-nibabel.get_reader
       python_name: napari_nibabel._reader:napari_get_reader
-      title: Open data with Napari NiBabel
-    - id: napari-nibabel.make_sample_data
-      python_name: napari_nibabel._sample_data:make_sample_data
-      title: Load sample data from Napari NiBabel
+      title: Open data with NiBabel
   readers:
     - command: napari-nibabel.get_reader
-      accepts_directories: false
-      filename_patterns: ['*.npy']
-  sample_data:
-    - command: napari-nibabel.make_sample_data
-      display_name: Napari NiBabel
-      key: unique_id.1
+      accepts_directories: true
+      filename_patterns:
+        - '*.par'  # Philips PAR/REC files
+        - '*.hdr'  # hdr/img files (ANALYZE or NIfTI)
+        - '*.nii'  # NIfTI
+        - '*.nii.gz'  # NIfTI (compressed)
+        - '*.gii'  # GIfTI
+        - '*.dcm'  # DICOM
